backend/k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nfc-ingestion-backend-svc
  namespace: nfc-backend
  labels:
    app: nfc-ingestion-backend
spec:
  type: ClusterIP
  selector:
    app: nfc-ingestion-backend
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
